[gd_scene format=3 uid="uid://cqp5p7fv7j212"]

[ext_resource type="Script" uid="uid://cqsp3yth2e7ua" path="res://src/ui/sad_end.gd" id="1_yhpej"]
[ext_resource type="Texture2D" uid="uid://lu1c61jlu7qx" path="res://assets/cutscenes/end0/end0_0.png" id="2_nha1y"]
[ext_resource type="Texture2D" uid="uid://dbtki6p0so7p" path="res://assets/cutscenes/end0/end0_1.png" id="3_qhfcl"]
[ext_resource type="FontFile" uid="uid://bu2226jf2f3wc" path="res://assets/fonts/PlaywriteNZBasic.ttf" id="3_yhpej"]
[ext_resource type="Texture2D" uid="uid://bovgefhsw6h40" path="res://assets/cutscenes/end0/end0_2.png" id="4_irt30"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2l1n"]
content_margin_left = 160.0
content_margin_top = 120.0
content_margin_right = 160.0
content_margin_bottom = 120.0
bg_color = Color(0, 0, 0, 0.84313726)
corner_radius_top_left = 92
corner_radius_top_right = 92
corner_radius_bottom_right = 92
corner_radius_bottom_left = 92

[node name="SadEnd" type="Control" unique_id=1346868074]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhpej")

[node name="Img0" type="TextureRect" parent="." unique_id=1514823872]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_nha1y")

[node name="Img1" type="TextureRect" parent="." unique_id=1803257048]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_qhfcl")

[node name="Img2" type="TextureRect" parent="." unique_id=658076688]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_irt30")

[node name="Text0" type="PanelContainer" parent="." unique_id=1581860381]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -984.0
offset_top = -560.0
offset_right = 984.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_i2l1n")

[node name="VBoxContainer" type="VBoxContainer" parent="Text0" unique_id=1685833650]
layout_mode = 2
theme_override_constants/separation = 112

[node name="Label" type="Label" parent="Text0/VBoxContainer" unique_id=854626324]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yhpej")
theme_override_font_sizes/font_size = 48
text = "Ko finally emerged from the rift.
He returned with the Pearls."
autowrap_mode = 2

[node name="Text1" type="PanelContainer" parent="." unique_id=780915379]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -984.0
offset_top = -560.0
offset_right = 984.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_i2l1n")

[node name="VBoxContainer" type="VBoxContainer" parent="Text1" unique_id=307924971]
layout_mode = 2
theme_override_constants/separation = 112

[node name="Label" type="Label" parent="Text1/VBoxContainer" unique_id=1090574408]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yhpej")
theme_override_font_sizes/font_size = 48
text = "But the light came too late..."
autowrap_mode = 2

[node name="Text2" type="PanelContainer" parent="." unique_id=684246264]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -984.0
offset_top = -560.0
offset_right = 984.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_i2l1n")

[node name="VBoxContainer" type="VBoxContainer" parent="Text2" unique_id=97589758]
layout_mode = 2
theme_override_constants/separation = 112

[node name="Label" type="Label" parent="Text2/VBoxContainer" unique_id=1090447889]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yhpej")
theme_override_font_sizes/font_size = 48
text = "With a final, shimmering breath, the Great Kodama vanished into the wind, leaving only a memory behind."
autowrap_mode = 2
